[CFPR-0004] menu info 조회

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,4 +28,4 @@ u-chef:
   path:
     project-seq: /webApp.action?shop_member_seq={shop_member_seq}&mode=5150
     menu: /webApp.action?mode=5151&shop_member_seq={shop_member_seq}&project_seq={project_seq}
-    menu-detail: /webApp.action?mode=5170&item_code={menu_code}&shop_member_seq={shop_member_seq}
+    menu-info: /webApp.action?mode=5170&item_code={menu_code}&shop_member_seq={shop_member_seq}
